syntax = "proto3";

package hello;
option go_package = "egm.com/backend/proto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}
